test-cases/expected/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        # attached to 'foo'
        deployment.kubernetes.io/foo: "bar"
        # attached to 'hello'
        deployment.kubernetes.io/hello: "world"
        # attached to 'revision'
        deployment.kubernetes.io/revision: "1"
    labels:
        # yes, still nginx
        app: nginx
        tier: frontend
    name: nginx-deploy
    namespace: production
spec:
    # min 3 replicas for HA
    replicas: 3
    selector:
        matchLabels:
            app: nginx
    strategy:
        rollingUpdate:
            maxSurge: 1
            # downtime is fine
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: nginx
                tier: frontend
        spec:
            containers:
                - image: nginx:1.25
                  livenessProbe:
                    httpGet:
                        path: /
                        port: 80
                    # give hime some time, will ya!
                    initialDelaySeconds: 10
                    periodSeconds: 5
                  name: nginx
                  ports:
                    - containerPort: 80
                      protocol: TCP
                  resources:
                    limits:
                        cpu: 200m
                        memory: 256Mi
                    requests:
                        cpu: 100m
                        # min 128Mi memory required
                        memory: 128Mi
