test-cases/expected/k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    labels:
        app: debug
    name: debug-pod
    namespace: default
spec:
    containers:
        - command:
            - sleep
            - "3600"
          image: busybox:1.36
          name: busybox
          resources:
            limits:
                cpu: 100m
                memory: 128Mi
            requests:
                cpu: 50m
                memory: 64Mi
    restartPolicy: Never
    tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: debug
