test-cases/expected/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: nginx
    name: nginx-svc
    namespace: production
spec:
    ports:
        - name: metrics
          port: 9090
          protocol: TCP
          targetPort: 9090
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: nginx
        tier: frontend
    sessionAffinity: None
    type: ClusterIP
