test-cases/expected/neuvector-admission-rules.yaml
apiVersion: neuvector.com/v1
kind: NvAdmissionControlSecurityRule
metadata:
    name: local
spec:
    rules:
        - action: deny
          comment: only allow custom registry
          criteria:
            - name: imageRegistry
              op: notContainsAny
              path: imageRegistry
              value: 'https://registry.fullstacks.io,https://registry.lab.fullstacks.io'
          disabled: false
        - action: deny
          comment: deny hostIPC
          criteria:
            - name: namespace
              op: notContainsAny
              path: namespace
              value: 'kube-system,cattle-system,trident,calico-system,cattle-fleet-system'
            - name: shareIpcWithHost
              op: "="
              path: shareIpcWithHost
              value: "true"
